# BridgeKeeper

./: .gitignore  CMakeLists.txt  README.md  raw_to_degrees_test.ino
boards/KPMC/KPMC_BRUG_CONTROLLER/: KPMC_brug_controller.bak  KPMC_brug_controller.kicad_pcb-bak  KPMC_brug_controller.pro  KPMC_brug_controller.sch
boards/KPMC/KPMC_BRUG_NAV_LIGHTS/: KPMC_BRUG_NAV_LIGHTS.kicad_pcb  KPMC_BRUG_NAV_LIGHTS.net  KPMC_BRUG_NAV_LIGHTS.sch
boards/controller_board/: KPMC_brug_controller-cache.lib  KPMC_brug_controller.bak  KPMC_brug_controller.kicad_pcb  KPMC_brug_controller.net  KPMC_brug_controller.sch
boards/controller_board/arduino_nano.pretty/: Arduino_nano.kicad_mod
boards/lights_board/: KPMC_BRUG_NAV_LIGHTS-cache.lib  KPMC_BRUG_NAV_LIGHTS.bak  KPMC_BRUG_NAV_LIGHTS.kicad_pcb-bak  KPMC_BRUG_NAV_LIGHTS.pro
cmake/: arduino-1.6.cmake  arduino.cmake  avr-toolchain.cmake  build-env.cmake
controller/: AngleSensor.cpp  AngleSensor.h  BatterySensor.cpp  BatterySensor.h  BridgeActuator.cpp  BridgeActuator.h  Button.cpp  Button.h  CMakeLists.txt  Controller.cpp  Controller.h  LICENSE  Pinout.h  README.md  Receiver.cpp  Receiver.h  State.h  UI.cpp  UI.h  main.cpp  mainold.cpp
controller/cmake/: arduino.cmake  avr-toolchain.cmake  build-env.cmake  build-env.cmake.example
controller/src/: main.cpp
include/: BridgeKeeper.h
lightpole/: CMakeLists.txt  main.cpp
lightpole/cmake/: avr-toolchain.cmake
lightpole/src/: Manchester.cpp  main.cpp
motorfb/: CMakeLists.txt  main.cpp  pinout.h
protocol/: BridgeKeeper.h
remote/: CMakeLists.txt  avrdude.conf  main.cpp
src/: Manchester.cpp  Manchester.h  main.cpp
